import React from 'react'
import { shallow } from 'enzyme'
import { ExpensesSummary } from "../../components/ExpensesSummary";
import expenses from '../fixtures/expenses'


test('should render ExpensesSummary with 1 expense', () => {
  const wrapper = shallow(<ExpensesSummary expenseCount={1} expensesTotal={23.54}/>)
  expect(wrapper).toMatchSnapshot()
})

test('should render ExpensesSummary with multiple expenses', () => {
  const wrapper = shallow(<ExpensesSummary expenseCount={3} expensesTotal={100.32}/>)
  expect(wrapper).toMatchSnapshot()
})

