// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
     Viewing 
    1
     
    expense
     totalling 
    23.54
  </h1>
</div>
`;

exports[`should render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
     Viewing 
    3
     
    expenses
     totalling 
    100.32
  </h1>
</div>
`;
